# shared-components

./: .env.example  .eslintrc.json  .gitignore  .releaserc.json  PUBLISHING.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.devcontainer/: Dockerfile.vscode  devcontainer.json
.github/: WORKFLOWS.md
.github/workflows/: ci.yml  publish-python.yml  publish.yml  release-auth.yml  storybook.yml
.storybook/: main.ts  preview.ts  tailwind.config.js  vite.config.ts
docs/: Welcome.mdx
python/: .gitignore  README.md  pyproject.toml  python.mdx  setup.cfg
scripts/: publish-auth.sh  version-auth.sh
